# byo-os

./: .gitignore  CLAUDE.md  Cargo.toml  GRAMMAR.md  README.md
.github/workflows/: ci.yml
assets/fonts/: fonts.toml
crates/byo_ipc/: Cargo.toml
crates/byo_ipc/src/: base.rs  envelope.rs  lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/comparisons/: README.md  appkit.md  at-spi.md  dbus.md  gobject.md  qt.md  react.md  wayland.md  win32.md  x11.md
docs/theme/: byo-highlight.js  highlight.js
examples/: 01-hello.sh  02-sidebar.sh  03-colors.sh  04-sizing.sh  05-flexbox.sh  06-borders.sh  07-spacing.sh  08-dynamic-text.sh  09-create-destroy.sh  10-patch-props.sh  11-card-grid.sh  12-progress-bars.sh  13-order.sh  14-css-colors.sh  15-todo-app.sh  16-window-layer.sh  17-multi-layer.sh  18-layer-patching.sh  19-system-monitor.sh  20-transforms.sh  21-animated-rotation.sh  22-animated-transforms.sh  23-layer-transforms.sh  24-pbr-materials.sh  25-animated-layers.sh  26-animated-emissive.sh  27-layer-carousel.sh  28-view-spring.sh  29-transitions.sh  30-physics-spring.sh  31-pointer-events.sh  32-tty.sh  33-tty-views.sh  34-shadows.sh  35-shadow-transitions.sh  36-kitty-graphics.sh  37-kitty-graphics-tty.sh  38-controls.sh  39-fonts.sh  40-9slice.sh  (+3 more)
libs/byo/: Cargo.toml
libs/byo-macros/: Cargo.toml
libs/byo-macros/src/: codegen.rs  codegen_commands.rs  derive_props.rs  ir.rs  (+3 more)
services/controls/: Cargo.toml
system/compositor/: Cargo.toml
system/compositor/src/: commands.rs  components.rs  font.rs  id_map.rs  io.rs  main.rs  measure.rs  plugin.rs  resize.rs  scroll.rs  scroll_message.rs  tty.rs
system/compositor/src/events/: config.rs  engine.rs  mod.rs  observers.rs
system/compositor/src/kitty_gfx/: mod.rs  placement.rs  store.rs  systems.rs
system/compositor/src/props/: layer.rs  mod.rs  text.rs  tty.rs  types.rs  view.rs  window.rs
system/compositor/src/render/: layer.rs  mod.rs  window.rs
system/compositor/src/style/: color.rs  mod.rs  palette.rs  shadow.rs  tailwind.rs
system/compositor/src/transition/: config.rs  mod.rs  state.rs  systems.rs  velocity.rs
system/orchestrator/: Cargo.toml
(+52 files in other folders)
