[workspace]
resolver = "2"
members = [
    "libs/byo",
    "libs/byo-macros",
    "system/compositor",
    "system/orchestrator",
    "services/controls",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
byo = { path = "libs/byo" }
byo-macros = { path = "libs/byo-macros" }
bevy = { version = "0.18", features = ["ui"] }
tokio = { version = "1", features = ["full"] }
