[package]
name = "byo-compositor"
version = "0.1.0"
edition.workspace = true

[dependencies]
byo.workspace = true
bevy.workspace = true
bytes.workspace = true
alacritty_terminal = { version = "0.25", default-features = false }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
